Apply route: fall back to default brokerage instead of error when invalid agent specified: https://app.asana.com/0/30184214178581/41284564472863 Banner: fix agent photos causing overflow

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -67,7 +67,8 @@ $material-box
 		&-image
 			float right
 			margin 0 0 0 3em
-			border-radius 50%
+			border-radius 0.2em
+			max-height 6em
 			+media-query($breakpointMain)
 				float none
 		flex 1
